# news-bot

./: README.md  com.newsbot.morning.plist  config.yaml  news.spec  pyproject.toml
.github/workflows/: release.yml
src/news_bot/: __init__.py  cache.py  cli.py  config.py  extractor.py  fetcher.py  menu.py  models.py
